# TatVTON

./: .gitignore  LICENSE  README.ko.md  README.md  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
examples/: advanced_tryon.py  basic_tryon.py
notebooks/: tatvton_colab_test.ipynb  train_controlnet_colab.ipynb
scripts/: build_hf_dataset.py  crawl_reddit_tattoos.py  generate_iuv_maps.py  generate_synthetic.py  label_dataset.py  requirements-data.txt  train_controlnet.py
src/ttvton/: _version.py  cli.py
src/ttvton/pipeline/: __init__.py  inpainting_engine.py
src/ttvton/utils/: device.py  image.py  mask.py
tatvton/: __init__.py  __main__.py  _version.py  cli.py  config.py  types.py
tatvton/models/: __init__.py  hub.py  model_loader.py
tatvton/pipeline/: inpainting_engine.py  tatvton_pipeline.py
tatvton/postprocessing/: __init__.py  compositing.py
tatvton/preprocessing/: densepose_extractor.py  input_validator.py  skin_mask_extractor.py
tatvton/utils/: imports.py
tests/: conftest.py  test_cli.py  test_pipeline.py
tests/utils/: test_image.py  test_mask.py
ttvton/: __init__.py  __main__.py  config.py
ttvton/pipeline/: tatvton_pipeline.py
ttvton/postprocessing/: compositing.py
ttvton/preprocessing/: __init__.py  densepose_extractor.py  input_validator.py  skin_mask_extractor.py
ttvton/utils/: __init__.py  imports.py
